more things done

--- a/Google API.ipynb
+++ b/Google API.ipynb
@@ -2,39 +2,281 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import googlemaps\n",
-    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "import pathlib\n",
     "\n",
-    "gmaps = googlemaps.Client(key='AIzaSyBSBDwyMm6n3L241eBV_NKPES8es_mK2ss')\n"
+    "import googlemaps\n",
+    "\n",
+    "gmaps = googlemaps.Client(key='AIzaSyBSBDwyMm6n3L241eBV_NKPES8es_mK2ss')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [x for x in pathlib.Path(\"zonas_eleitorais\").iterdir() if x.is_file()]\n",
+    "\n",
+    "all_data = {}\n",
+    "sizes = {}\n",
+    "zona_count = 0\n",
+    "for state in files:\n",
+    "    name = state.name.split(\".\")[0]\n",
+    "    all_data[name] = pd.read_csv(state, encoding=\"latin1\", index_col=\"numero_zona\")\n",
+    "    size = len(all_data[name])\n",
+    "    sizes[name] = size\n",
+    "    zona_count += size\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'address_components': [{'long_name': '1600', 'short_name': '1600', 'types': ['street_number']}, {'long_name': 'Amphitheatre Parkway', 'short_name': 'Amphitheatre Pkwy', 'types': ['route']}, {'long_name': 'Mountain View', 'short_name': 'Mountain View', 'types': ['locality', 'political']}, {'long_name': 'Santa Clara County', 'short_name': 'Santa Clara County', 'types': ['administrative_area_level_2', 'political']}, {'long_name': 'California', 'short_name': 'CA', 'types': ['administrative_area_level_1', 'political']}, {'long_name': 'United States', 'short_name': 'US', 'types': ['country', 'political']}, {'long_name': '94043', 'short_name': '94043', 'types': ['postal_code']}], 'formatted_address': '1600 Amphitheatre Pkwy, Mountain View, CA 94043, USA', 'geometry': {'location': {'lat': 37.4223856, 'lng': -122.0858516}, 'location_type': 'ROOFTOP', 'viewport': {'northeast': {'lat': 37.42373458029149, 'lng': -122.0845026197085}, 'southwest': {'lat': 37.4210366197085, 'lng': -122.0872005802915}}}, 'place_id': 'ChIJ2eUgeAK6j4ARbn5u_wAGqWA', 'plus_code': {'compound_code': 'CWC7+XR Mountain View, California, United States', 'global_code': '849VCWC7+XR'}, 'types': ['street_address']}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "sigla_uf                           07-0001\n",
+       "endereco          SCRS 512 BLOCO B LOJA 70\n",
+       "cep                               70361535\n",
+       "bairro                             ASA SUL\n",
+       "nome_municipio                    BRASÍLIA\n",
+       "sigla_uf.1                              DF\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = all_data[\"df\"]\n",
+    "row = df.iloc[0]\n",
+    "row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sigla_uf</th>\n",
+       "      <th>endereco</th>\n",
+       "      <th>cep</th>\n",
+       "      <th>bairro</th>\n",
+       "      <th>nome_municipio</th>\n",
+       "      <th>sigla_uf.1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>numero_zona</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>07-0001</td>\n",
+       "      <td>SCRS 512 BLOCO B LOJA 70</td>\n",
+       "      <td>70361535</td>\n",
+       "      <td>ASA SUL</td>\n",
+       "      <td>BRASÍLIA</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>07-0002</td>\n",
+       "      <td>QUADRA 04 CONJUNTO B LOTE 06</td>\n",
+       "      <td>71570202</td>\n",
+       "      <td>PARANOÁ</td>\n",
+       "      <td>BRASÍLIA</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>07-0003</td>\n",
+       "      <td>SETOR QNJ AE 16 TAGUATINGA-DF</td>\n",
+       "      <td>72140616</td>\n",
+       "      <td>TAGUATINGA NORTE</td>\n",
+       "      <td>BRASÍLIA</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>07-0004</td>\n",
+       "      <td>CL 207, LOTES A3 E A4 - SANTA MARIA</td>\n",
+       "      <td>72507220</td>\n",
+       "      <td>SANTA MARIA</td>\n",
+       "      <td>BRASÍLIA</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>07-0005</td>\n",
+       "      <td>QUADRA 07 AREA RESERVADA 01</td>\n",
+       "      <td>73035070</td>\n",
+       "      <td>SOBRADINHO</td>\n",
+       "      <td>BRASÍLIA</td>\n",
+       "      <td>DF</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            sigla_uf                             endereco       cep  \\\n",
+       "numero_zona                                                           \n",
+       "1            07-0001             SCRS 512 BLOCO B LOJA 70  70361535   \n",
+       "2            07-0002         QUADRA 04 CONJUNTO B LOTE 06  71570202   \n",
+       "3            07-0003        SETOR QNJ AE 16 TAGUATINGA-DF  72140616   \n",
+       "4            07-0004  CL 207, LOTES A3 E A4 - SANTA MARIA  72507220   \n",
+       "5            07-0005          QUADRA 07 AREA RESERVADA 01  73035070   \n",
+       "\n",
+       "                       bairro nome_municipio sigla_uf.1  \n",
+       "numero_zona                                              \n",
+       "1                     ASA SUL       BRASÍLIA         DF  \n",
+       "2                     PARANOÁ       BRASÍLIA         DF  \n",
+       "3            TAGUATINGA NORTE       BRASÍLIA         DF  \n",
+       "4                 SANTA MARIA       BRASÍLIA         DF  \n",
+       "5                  SOBRADINHO       BRASÍLIA         DF  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DAILY_LIMIT = 900"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Geocoding an address\n",
     "components = {\n",
-    "    \"country\": \"ISO 3166-2:BR\",\n",
+    "    \"country\": \"BR\",\n",
     "}\n",
     "\n",
     "get_geocode = lambda x: gmaps.geocode(x, language=\"pt-BR\", components=components)\n",
     "\n",
     "def format_address(row):\n",
     "    return f\"{row['endereco']}, {row['bairro']}, {row['nome_municipio']}, {row['sigla_uf.1']}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = get_geocode(format_address(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(results)"
    ]
   }
  ],
@@ -43,18 +285,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5rc1"
   }
  },
  "nbformat": 4,
