--- a/first look.ipynb
+++ b/first look.ipynb
@@ -26,15 +26,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = [x for x in pathlib.Path(\"zonas_eleitorais\").iterdir() if x.is_file()]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -50,6 +41,8 @@
     }
    ],
    "source": [
+    "files = [x for x in pathlib.Path(\"zonas_eleitorais\").iterdir() if x.is_file()]\n",
+    "\n",
     "all_data = {}\n",
     "zona_count = 0\n",
     "for state in files:\n",
@@ -191,33 +184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sigla_uf                           07-0001\n",
-       "endereco          SCRS 512 BLOCO B LOJA 70\n",
-       "cep                               70361535\n",
-       "bairro                             ASA SUL\n",
-       "nome_municipio                    BRASÍLIA\n",
-       "sigla_uf.1                              DF\n",
-       "Name: 1, dtype: object"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "row = df.iloc[0]\n",
-    "row"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -233,6 +199,9 @@
     }
    ],
    "source": [
+    "row = df.iloc[0]\n",
+    "row\n",
+    "\n",
     "f\"{row['endereco']}, {row['bairro']}, {row['nome_municipio']}, {row['sigla_uf.1']}\""
    ]
   }
@@ -253,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5rc1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
