--- a/Google API.ipynb
+++ b/Google API.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bcoelho/.local/lib/python3.6/site-packages/requests/__init__.py:80: RequestsDependencyWarning: urllib3 (1.24) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  RequestsDependencyWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pathlib\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,206 +45,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sigla_uf                           07-0001\n",
-       "endereco          SCRS 512 BLOCO B LOJA 70\n",
-       "cep                               70361535\n",
-       "bairro                             ASA SUL\n",
-       "nome_municipio                    BRASÍLIA\n",
-       "sigla_uf.1                              DF\n",
-       "Name: 1, dtype: object"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = all_data[\"df\"]\n",
-    "row = df.iloc[0]\n",
-    "row"
+    "DAILY_LIMIT = 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sigla_uf</th>\n",
-       "      <th>endereco</th>\n",
-       "      <th>cep</th>\n",
-       "      <th>bairro</th>\n",
-       "      <th>nome_municipio</th>\n",
-       "      <th>sigla_uf.1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>numero_zona</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>07-0001</td>\n",
-       "      <td>SCRS 512 BLOCO B LOJA 70</td>\n",
-       "      <td>70361535</td>\n",
-       "      <td>ASA SUL</td>\n",
-       "      <td>BRASÍLIA</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>07-0002</td>\n",
-       "      <td>QUADRA 04 CONJUNTO B LOTE 06</td>\n",
-       "      <td>71570202</td>\n",
-       "      <td>PARANOÁ</td>\n",
-       "      <td>BRASÍLIA</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>07-0003</td>\n",
-       "      <td>SETOR QNJ AE 16 TAGUATINGA-DF</td>\n",
-       "      <td>72140616</td>\n",
-       "      <td>TAGUATINGA NORTE</td>\n",
-       "      <td>BRASÍLIA</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>07-0004</td>\n",
-       "      <td>CL 207, LOTES A3 E A4 - SANTA MARIA</td>\n",
-       "      <td>72507220</td>\n",
-       "      <td>SANTA MARIA</td>\n",
-       "      <td>BRASÍLIA</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>07-0005</td>\n",
-       "      <td>QUADRA 07 AREA RESERVADA 01</td>\n",
-       "      <td>73035070</td>\n",
-       "      <td>SOBRADINHO</td>\n",
-       "      <td>BRASÍLIA</td>\n",
-       "      <td>DF</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            sigla_uf                             endereco       cep  \\\n",
-       "numero_zona                                                           \n",
-       "1            07-0001             SCRS 512 BLOCO B LOJA 70  70361535   \n",
-       "2            07-0002         QUADRA 04 CONJUNTO B LOTE 06  71570202   \n",
-       "3            07-0003        SETOR QNJ AE 16 TAGUATINGA-DF  72140616   \n",
-       "4            07-0004  CL 207, LOTES A3 E A4 - SANTA MARIA  72507220   \n",
-       "5            07-0005          QUADRA 07 AREA RESERVADA 01  73035070   \n",
-       "\n",
-       "                       bairro nome_municipio sigla_uf.1  \n",
-       "numero_zona                                              \n",
-       "1                     ASA SUL       BRASÍLIA         DF  \n",
-       "2                     PARANOÁ       BRASÍLIA         DF  \n",
-       "3            TAGUATINGA NORTE       BRASÍLIA         DF  \n",
-       "4                 SANTA MARIA       BRASÍLIA         DF  \n",
-       "5                  SOBRADINHO       BRASÍLIA         DF  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.head()"
+    "ordered_states = sorted(sizes.items())\n",
+    "first_limit = 10\n",
+    "second_limit = 18\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DAILY_LIMIT = 900"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,33 +82,221 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "results = get_geocode(format_address(row))"
+    "# Basic function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_day(lst_states, save_folder=\"\", testing=False, testing_max=0, testing_save=False):\n",
+    "    count = 0\n",
+    "    empty = []\n",
+    "    more_than_one = []\n",
+    "    \n",
+    "    for state, size in lst_states:\n",
+    "        for index, row in all_data[state].iterrows():\n",
+    "            try:\n",
+    "                results = get_geocode(format_address(row))\n",
+    "                if not results:\n",
+    "                    empty.append(row)\n",
+    "                    continue\n",
+    "                    \n",
+    "                if len(results) > 1: \n",
+    "                    more_than_one.append(row)\n",
+    "                    \n",
+    "                for result_num, result in enumerate(results):\n",
+    "                    lat = results[0][\"geometry\"][\"location\"][\"lat\"]\n",
+    "                    lng = results[0][\"geometry\"][\"location\"][\"lng\"]\n",
+    "\n",
+    "                    all_data[state].loc[index, f\"lat_{result_num}\"] = lat\n",
+    "                    all_data[state].loc[index, f\"lng_{result_num}\"] = lng\n",
+    "\n",
+    "                if testing and count >= testing_max:\n",
+    "                    if testing_save:\n",
+    "                        all_data[state].to_csv(f\"{save_folder}{state}\")\n",
+    "                    return empty, more_than_one, all_data[state]\n",
+    "\n",
+    "                count += 1\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                print(e)\n",
+    "                \n",
+    "        print(f\"Estado {state} foi processado\")\n",
+    "    \n",
+    "            \n",
+    "    print(f\"{count} zonas eleitorais foram processadas\")\n",
+    "    print(f\"houveram {len(empty)} erros\")\n",
+    "    print(f\"houveram {len(more_than_one)} pesquisas com mais de 1 resultados\")\n",
+    "    \n",
+    "    return empty, more_than_one"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estado acre foi processado\n",
+      "Estado alagoas foi processado\n",
+      "Estado amapa foi processado\n",
+      "Estado amazonas foi processado\n",
+      "Estado bahia foi processado\n",
+      "Estado ceara foi processado\n",
+      "Estado df foi processado\n",
+      "Estado es foi processado\n",
+      "Estado goias foi processado\n",
+      "Estado maranhao foi processado\n",
+      "698 zonas eleitorais foram processadas\n",
+      "houveram 1 erros\n",
+      "houveram 104 pesquisas com mais de 1 resultados\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 3, got 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-c50986729e16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfirst_day\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mordered_states\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mfirst_limit\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mempty\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmore_than_one\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_day\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_day\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_folder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"processed_zonas_eleitorais/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 3, got 2)"
+     ]
     }
    ],
    "source": [
-    "len(results)"
+    "first_day = [x for x in ordered_states[:first_limit]]\n",
+    "empty, more_than_one, df = run_day(first_day, save_folder=\"processed_zonas_eleitorais/\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for state, size in first_day: \n",
+    "    all_data[state].to_csv(f\"{save_folder}{state}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Second day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_day([x for x in ordered_states[first_limit:second_limit]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Third day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "run_day([x for x in ordered_states[second_limit:]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -285,6 +304,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5rc1"
   }
  },
  "nbformat": 4,
