First day running

--- a/Google API.ipynb
+++ b/Google API.ipynb
@@ -182,15 +182,16 @@
    ],
    "source": [
     "first_day = [x for x in ordered_states[:first_limit]]\n",
-    "empty, more_than_one, df = run_day(first_day, save_folder=\"processed_zonas_eleitorais/\")\n"
+    "empty, more_than_one, = run_day(first_day, save_folder=\"processed_zonas_eleitorais/\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "save_folder = \"processed_zonas_eleitorais/\"\n",
     "for state, size in first_day: \n",
     "    all_data[state].to_csv(f\"{save_folder}{state}\") "
    ]
